examples/test/testpolicy17561.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17561
  namespace: namespace146
spec:
  podSelector:
    matchLabels:
      key16: value33
      key1: value41
      key7: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value18
      podSelector:
        matchLabels:
          key3: value6
